keptn/setup/vs-keptn-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: keptn
spec:
  gateways:
  - public-gateway.istio-system
  hosts:
  - api.keptn.domain.placeholder
  - api.keptn
  http:
  - route:
    - destination:
        host: api.keptn.svc.cluster.local
    websocketUpgrade: true
